@@ -477,10 +477,6 @@ $strConfigRetainQueryBox_desc = __('Defines whether the query box should stay on
 $strConfigRetainQueryBox_name = __('Retain query box');
 $strConfigShowStats_desc = __('Allow to display database and table statistics (eg. space usage)');
 $strConfigShowStats_name = __('Show statistics');
-$strConfigShowTooltipAliasDB_desc = __('If tooltips are enabled and a database comment is set, this will flip the comment and the real name');
-$strConfigShowTooltipAliasDB_name = __('Display database comment instead of its name');
-$strConfigShowTooltipAliasTB_desc = __('When setting this to [kbd]nested[/kbd], the alias of the table name is only used to split/nest the tables according to the $cfg[\'LeftFrameTableSeparator\'] directive, so only the folder is called like the alias, the table name itself stays unchanged');
-$strConfigShowTooltipAliasTB_name = __('Display table comment instead of its name');
 $strConfigShowTooltip_name = __('Display table comments in tooltips');
 $strConfigSkipLockedTables_desc = __('Mark used tables and make it possible to show databases with locked tables');
 $strConfigSkipLockedTables_name = __('Skip locked tables');
