@@ -172,15 +172,13 @@ $forms['Left_frame']['Left_servers'] = array(
     'DisplayServersList');
 $forms['Left_frame']['Left_databases'] = array(
     'LeftFrameDBTree',
-    'LeftFrameDBSeparator',
-    'ShowTooltipAliasDB');
+    'LeftFrameDBSeparator');
 $forms['Left_frame']['Left_tables'] = array(
     'LeftDisplayTableFilterMinimum',
     'LeftDefaultTabTable',
     'LeftFrameTableSeparator',
     'LeftFrameTableLevel',
-    'ShowTooltip',
-    'ShowTooltipAliasTB');
+    'ShowTooltip');
 $forms['Main_frame']['Startup'] = array(
     'ShowCreateDb',
     'ShowStats',
